--- a/reminder/src/views/reminder/Reminder.scss
+++ b/reminder/src/views/reminder/Reminder.scss
@@ -1,23 +1,27 @@
-
-
-.Reminder-Card{
+.Reminder-Card {
     border: 1px solid black;
-}
-
-.reminder-card-p{
+  }
+  
+  .reminder-card-p {
     text-align: justify;
     text-justify: inter-word;
-}
-.icons{
+  }
+  
+  .icons {
     cursor: pointer;
-}
-.reminder-update{
+  }
+  
+  .reminder-update {
     width: 100%;
     height: 80vh;
-    position: absolute;
     position: fixed;
     top: 80px;
     left: 0px;
-    background-color:blanchedalmond;
+    background-color: blanchedalmond;
     display: none;
-}
+
+    .btn {
+      margin: 8px;
+    }
+  }
+  
